--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -673,6 +673,9 @@ a.add-row
     background-color: $white
     border-color: #888888
 
+.talk-last_msg
+    color: #888
+
 @media(max-width: 768px) 
     .navbar .navbar-nav .dropdown .dropdown-menu li > a 
         color: #333333 !important
