--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -501,6 +501,9 @@ a.add-row {
   background-color: #FFFFFF;
   border-color: #888888; }
 
+.talk-last_msg {
+  color: #888; }
+
 @media(max-width: 768px) {
   .navbar .navbar-nav .dropdown .dropdown-menu li > a {
     color: #333333 !important; }
