--- a/webconference/templates/webconference/view.html
+++ b/webconference/templates/webconference/view.html
@@ -65,7 +65,7 @@
                 <!--  Button to join in web conference -->
                 <div class="row">
                   <div class="text-center">
-                    <a href="#" class="btn btn-raised btn-success">{% trans "Participate" %}</a>
+                    <a href="{% url 'webconferences:conference' webconference.slug %}" class="btn btn-raised btn-success">{% trans "Participate" %}</a>
                   </div>
                 </div>
                 {% endif %}
