--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -645,7 +645,7 @@ a.add-row
 .participant
     border-color: #888
 
-.participant .user-info h4, .modal_profile_sidebar h4
+.participant .user-info h4, .modal_profile_sidebar h4, .message-view .message-user
     color: #59b75c
 
 .participant .user-info .status, .modal_profile_sidebar .status
@@ -674,6 +674,12 @@ a.add-row
     border-color: #888888
 
 .talk-last_msg
+    color: #888
+
+.message-view
+    border-top-color: #cacaca
+
+.message-view .message-user .message-date
     color: #888
 
 @media(max-width: 768px) 
