--- a/chat/templates/chat/talk.html
+++ b/chat/templates/chat/talk.html
@@ -39,9 +39,9 @@
 	        </div>
 	        <div class="row-fluid">
 	        	<div class="messages-container">
-	        		{% for talk_msg in messages %}
-	        			{% include 'chat/_message.html' %}
-	        		{% endfor %}
+	        		<div class="messages-list">
+	        			{% include 'chat/_list_messages.html' %}
+	        		</div>
 	        	</div>
 	        </div>
 		</div>
