Adding general chat notifications

--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -682,6 +682,10 @@ a.add-row
 .message-view .message-user .message-date
     color: #888
 
+.messages_new
+    color: $white
+    background-color: #59b75c
+
 @media(max-width: 768px) 
     .navbar .navbar-nav .dropdown .dropdown-menu li > a 
         color: #333333 !important
