--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1477,4 +1477,23 @@ div.dataTables_wrapper div.dataTables_paginate {
 .message-view .btn-group .btn_menu i {
     font-size: 16px;
 }
+
+.messages_new {
+    position: absolute;
+    line-height: normal;
+    left: 35%;
+    margin-top: 10px;
+    padding: 10px 15px;
+    border-radius: 20px;
+    z-index: 100;
+    font-weight: 700;
+    cursor: pointer;
+    display: none;
+}
+
+@-moz-document url-prefix() {
+    .talk_body .checkbox input[type="checkbox"] {
+        display: none;
+    }
+}
 /* End Chat */
