--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -84,11 +84,11 @@
 						{% endfor %}
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12">
-								<div class="pull-left">
-									<input type="submit" value="{% trans 'Register' %}" class="btn btn-raised btn-success" />
+								<div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+									<input type="submit" value="{% trans 'Register' %}" class="btn btn-success btn-raised btn-block" />
 								</div>
-								<div class="pull-right">
-									<a href="{% url 'users:login' %}" class="btn btn-raised btn-default"> {% trans 'Back' %}</a>
+								<div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+									<a href="{% url 'users:login' %}" class="btn btn-default btn-raised btn-block"> {% trans 'Back' %}</a>
 								</div>
 							</div>
 						</div>
