--- a/students_group/templates/groups/_form.html
+++ b/students_group/templates/groups/_form.html
@@ -25,8 +25,11 @@
 			</div>
 		{% else %}
 			<div class="form-group {% if form.has_error %} has-error {% endif %} is-fileinput">
-				<label for="{{ field.auto_id }}">{{ field.label }}</label>
-
+						{% if field.field.required %}
+					<label for="{{ field.auto_id }}">{{ field.label }} <span>*</span></label>
+						{% else %}
+						<label for="{{ field.auto_id }}">{{ field.label }}</label>
+						{% endif %}
 				{% if field.auto_id == 'id_description' %}
 					{% render_field field class='form-control text_wysiwyg' %}
 				{% else %}
