--- a/users/templates/users/_form.html
+++ b/users/templates/users/_form.html
@@ -4,7 +4,7 @@
 <form method="post" action="" enctype="multipart/form-data">
 	{% csrf_token %}
 	{% for field in form %}
-		<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
+		<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput col-lg-12 col-md-12 col-sm-12">
 			{% if field.auto_id == 'id_image' %}
         		{% if field.field.required %}
 					<label for="{{ field.auto_id }}">{{ field.label }} <span>*</span></label>
@@ -56,12 +56,15 @@
 			{% endif %}
 		</div>
 	{% endfor %}
-	<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-		<div class="pull-left">
-			<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-success" />
-		</div>
-		<div class="pull-right">
-			<a href="{% url back_url %}" class="btn btn-raised btn-default">{% trans 'Cancel' %}</a>
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12">
+			<div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+				<input type="submit" value="{% trans 'Save' %}" class="btn btn-success btn-raised btn-block" />
+			</div>
+			<div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+				<a href="{% url back_url %}" class="btn btn-default btn-raised btn-block">{% trans 'Cancel' %}</a>
+			</div>
 		</div>
 	</div>
+
 </form>
