Adjusting top submenu break (Mozilla)

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -317,6 +317,12 @@ a:focus {
     -webkit-padding-start: 0px;
 }
 
+@-moz-document url-prefix() {
+    .submenu {
+        padding-left: 0px;
+    }
+}
+
 .top-search::-webkit-input-placeholder {
     font-style: italic;
 }
