created model for retrieving simple csv report files and now it's possibl to download csv files

--- a/reports/templates/reports/_form.html
+++ b/reports/templates/reports/_form.html
@@ -94,7 +94,7 @@
     </div>
 
     <div class="row text-center">
-        <input type="submit" value="{% trans 'Search' %}" class="btn btn-success btn-raised" />
+        <input type="submit" value="{% trans 'Search Report' %}" class="btn btn-success btn-raised" />
     </div>
 </form>
 
