--- a/reports/templates/reports/view.html
+++ b/reports/templates/reports/view.html
@@ -65,7 +65,9 @@
     	<ul id="report-info">
     		<li> {{data.values|length}} {% trans "register(s)" %} </li>
     		<li>
-    			<i class="fa fa-download" aria-hidden="true"></i> {% trans "Interactions Data" %}
+    			<a href="{% url 'subjects:reports:download_report' %}?{{csv_data}}"><i class="fa fa-download" aria-hidden="true"></i> {% trans "Interactions Data" %}</a>
+
+
     		</li>
     	</ul>
     	
