--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1468,6 +1468,7 @@ div.dataTables_wrapper div.dataTables_paginate {
 #msg_editable {
     width: 100%;
     z-index: 1;
+    min-height: 20px;
 }
 
 .action-button {
