--- a/chat/templates/chat/_view.html
+++ b/chat/templates/chat/_view.html
@@ -4,12 +4,12 @@
 
 {% is_online talking_to as status %}
 
-<div class="col-md-12 participant panel">
+<div id="talk-chat-{{ talking_to.id }}" class="col-md-12 participant panel">
     <div class="col-md-1 user-img">
         <img src="{{ talking_to.image_url }}" class="img-responsive" />
     </div>
     <div class="col-md-6 user-info">
-        <h4 class='talking-header'><a class="status {{ status }}" data-toggle="tooltip" title="{{ status|status_text }}"></a> {{ talking_to }}</h4>
+        <h4 class='talking-header'><a class="status {{ status }}" data-toggle="tooltip" title="{{ status|status_text }}"></a> {{ talking_to }} (<span class="chat_notify">{{ chat|notifies:request.user }}</span>)</h4>
         <p class="talk-last_msg">{% trans 'Last message in' %} {{ chat|last_message }}</p>
     </div>
     <div class="col-md-4 buttons pull-right text-center">
